<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:id="@+id/txtSelectDead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectDead"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        android:layout_marginTop="16dp"

        />

    <EditText
        android:id="@+id/noDados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSelectDead"
        android:layout_marginTop="16dp"
        />
    <TextView
        android:id="@+id/txtSelectFace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectFace"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noDados"
        android:layout_marginTop="16dp"

        />

    <EditText
        android:id="@+id/noDeCaras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/noDados"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"

        />

    <Button
        android:id="@+id/btnTirar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRoll"
        app:layout_constraintTop_toBottomOf="@id/noDeCaras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="34dp"
        />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtResult"
        app:layout_constraintTop_toBottomOf="@id/btnTirar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="36dp"
        android:layout_marginStart="36dp"

         />
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtResultado"
        />

    <Button
        android:id="@+id/btnRepetir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRollAgain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="36dp"
         />

</androidx.constraintlayout.widget.ConstraintLayout>